--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "authors": [
     {
       "name": "Walker Hamilton",
-      "email": "myself@walkerhamilton.com"
+      "email": "walker@revolutionmessaging.com"
     }
   ],
   "dependencies": {
