--- a/package.json
+++ b/package.json
@@ -14,12 +14,11 @@
   "author": "Walker Hamilton",
   "license": "MIT",
   "dependencies": {
-    "commander": "2.8.1",
-    "csv-parser": "1.7.0",
+    "commander": "2.9.0",
+    "csv-parser": "1.8.0",
     "lodash": "3.10.1",
-    "md5": "2.0.0",
-    "sha1": "^1.1.1",
-    "which": "^1.1.1"
+    "which": "1.2.0",
+    "emailvalidator": "0.1.3"
   },
   "devDependencies": {
     "coffee-script": "1.9.3"
