--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "csv-parser": "1.8.0",
     "lodash": "3.10.1",
     "which": "1.2.0",
-    "emailvalidator": "0.1.3"
+    "email-validator": "1.0.3"
   },
   "devDependencies": {
     "coffee-script": "1.9.3"
